# ReadOpenFoam

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.h  particle.cpp  particle.h
